--- a/crates/visored/visored-pipeline/expect-files/visored-pipeline-works/batch1.tex
+++ b/crates/visored/visored-pipeline/expect-files/visored-pipeline-works/batch1.tex
@@ -98,6 +98,58 @@ macro "obvious": tactic =>`(tactic|
 
 macro "in_set" : term => `(true)
 
+
+
+macro "term_trivial": tactic =>`(tactic|
+  first
+  | simp; done
+  | ring; done
+  | ring_nf; done
+  | linarith; done
+  | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
+)
+
+macro "old_main_hypothesis": tactic =>`(tactic|
+  first
+  | assumption; done
+  | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
+)
+
+macro "let_assigned": tactic =>`(tactic|
+  first
+  | dsimp; done
+  | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
+)
+
+macro "term_equivalent": tactic =>`(tactic|
+  first
+  | simp; done
+  | ring; done
+  | ring_nf; done
+  | linarith; done
+  | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
+)
+
+macro "comm_ring": tactic =>`(tactic|
+  first
+  | ring; done
+  | ring_nf; done
+  | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
+)
+
+macro "litnum_reduce": tactic =>`(tactic|
+  first
+  | simp; done
+  | simp [*]; done
+  | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
+)
+
+macro "litnum_bound": tactic =>`(tactic|
+  first
+  | linarith; done
+  | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
+)
+
 def h : 1 + 1 = 2 := by
   have h1 : 1 + 1 = 2 := by term_trivial
   obvious
@@ -158,6 +210,58 @@ macro "obvious": tactic =>`(tactic|
 )
 
 macro "in_set" : term => `(true)
+
+
+
+macro "term_trivial": tactic =>`(tactic|
+  first
+  | simp; done
+  | ring; done
+  | ring_nf; done
+  | linarith; done
+  | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
+)
+
+macro "old_main_hypothesis": tactic =>`(tactic|
+  first
+  | assumption; done
+  | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
+)
+
+macro "let_assigned": tactic =>`(tactic|
+  first
+  | dsimp; done
+  | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
+)
+
+macro "term_equivalent": tactic =>`(tactic|
+  first
+  | simp; done
+  | ring; done
+  | ring_nf; done
+  | linarith; done
+  | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
+)
+
+macro "comm_ring": tactic =>`(tactic|
+  first
+  | ring; done
+  | ring_nf; done
+  | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
+)
+
+macro "litnum_reduce": tactic =>`(tactic|
+  first
+  | simp; done
+  | simp [*]; done
+  | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
+)
+
+macro "litnum_bound": tactic =>`(tactic|
+  first
+  | linarith; done
+  | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
+)
 
 def h (x : ℝ) : x ^ 2 ≥ (0 : ℝ) := by
   have h1 : x ^ 2 ≥ (0 : ℝ) := by apply sq_nonneg
@@ -220,6 +324,58 @@ macro "obvious": tactic =>`(tactic|
 )
 
 macro "in_set" : term => `(true)
+
+
+
+macro "term_trivial": tactic =>`(tactic|
+  first
+  | simp; done
+  | ring; done
+  | ring_nf; done
+  | linarith; done
+  | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
+)
+
+macro "old_main_hypothesis": tactic =>`(tactic|
+  first
+  | assumption; done
+  | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
+)
+
+macro "let_assigned": tactic =>`(tactic|
+  first
+  | dsimp; done
+  | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
+)
+
+macro "term_equivalent": tactic =>`(tactic|
+  first
+  | simp; done
+  | ring; done
+  | ring_nf; done
+  | linarith; done
+  | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
+)
+
+macro "comm_ring": tactic =>`(tactic|
+  first
+  | ring; done
+  | ring_nf; done
+  | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
+)
+
+macro "litnum_reduce": tactic =>`(tactic|
+  first
+  | simp; done
+  | simp [*]; done
+  | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
+)
+
+macro "litnum_bound": tactic =>`(tactic|
+  first
+  | linarith; done
+  | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
+)
 
 def h (a b : ℝ) : a + b = b + a := by
   have h1 : a + b = b + a := by term_trivial
@@ -287,6 +443,58 @@ macro "obvious": tactic =>`(tactic|
 )
 
 macro "in_set" : term => `(true)
+
+
+
+macro "term_trivial": tactic =>`(tactic|
+  first
+  | simp; done
+  | ring; done
+  | ring_nf; done
+  | linarith; done
+  | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
+)
+
+macro "old_main_hypothesis": tactic =>`(tactic|
+  first
+  | assumption; done
+  | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
+)
+
+macro "let_assigned": tactic =>`(tactic|
+  first
+  | dsimp; done
+  | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
+)
+
+macro "term_equivalent": tactic =>`(tactic|
+  first
+  | simp; done
+  | ring; done
+  | ring_nf; done
+  | linarith; done
+  | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
+)
+
+macro "comm_ring": tactic =>`(tactic|
+  first
+  | ring; done
+  | ring_nf; done
+  | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
+)
+
+macro "litnum_reduce": tactic =>`(tactic|
+  first
+  | simp; done
+  | simp [*]; done
+  | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
+)
+
+macro "litnum_bound": tactic =>`(tactic|
+  first
+  | linarith; done
+  | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
+)
 
 def h (x : ℝ) (h1 : x > (0 : ℝ)) : x + (1 : ℝ) / x ≥ (2 : ℝ) := by
   have h2 : x > (0 : ℝ) := by old_main_hypothesis
@@ -361,6 +569,58 @@ macro "obvious": tactic =>`(tactic|
 
 macro "in_set" : term => `(true)
 
+
+
+macro "term_trivial": tactic =>`(tactic|
+  first
+  | simp; done
+  | ring; done
+  | ring_nf; done
+  | linarith; done
+  | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
+)
+
+macro "old_main_hypothesis": tactic =>`(tactic|
+  first
+  | assumption; done
+  | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
+)
+
+macro "let_assigned": tactic =>`(tactic|
+  first
+  | dsimp; done
+  | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
+)
+
+macro "term_equivalent": tactic =>`(tactic|
+  first
+  | simp; done
+  | ring; done
+  | ring_nf; done
+  | linarith; done
+  | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
+)
+
+macro "comm_ring": tactic =>`(tactic|
+  first
+  | ring; done
+  | ring_nf; done
+  | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
+)
+
+macro "litnum_reduce": tactic =>`(tactic|
+  first
+  | simp; done
+  | simp [*]; done
+  | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
+)
+
+macro "litnum_bound": tactic =>`(tactic|
+  first
+  | linarith; done
+  | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
+)
+
 def h (x : ℝ) : x ^ 2 + (1 : ℝ) ≥ (2 : ℝ) * x := by
   first
   | have h1 : (x - (1 : ℝ)) ^ 2 ≥ (0 : ℝ) := by calc
@@ -430,6 +690,58 @@ macro "obvious": tactic =>`(tactic|
 )
 
 macro "in_set" : term => `(true)
+
+
+
+macro "term_trivial": tactic =>`(tactic|
+  first
+  | simp; done
+  | ring; done
+  | ring_nf; done
+  | linarith; done
+  | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
+)
+
+macro "old_main_hypothesis": tactic =>`(tactic|
+  first
+  | assumption; done
+  | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
+)
+
+macro "let_assigned": tactic =>`(tactic|
+  first
+  | dsimp; done
+  | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
+)
+
+macro "term_equivalent": tactic =>`(tactic|
+  first
+  | simp; done
+  | ring; done
+  | ring_nf; done
+  | linarith; done
+  | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
+)
+
+macro "comm_ring": tactic =>`(tactic|
+  first
+  | ring; done
+  | ring_nf; done
+  | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
+)
+
+macro "litnum_reduce": tactic =>`(tactic|
+  first
+  | simp; done
+  | simp [*]; done
+  | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
+)
+
+macro "litnum_bound": tactic =>`(tactic|
+  first
+  | linarith; done
+  | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
+)
 
 def h (x : ℝ) (h1 : x ≥ (0 : ℝ)) : x + (1 : ℝ) ≥ (2 : ℝ) * √ x := by
   first
@@ -512,6 +824,58 @@ macro "obvious": tactic =>`(tactic|
 )
 
 macro "in_set" : term => `(true)
+
+
+
+macro "term_trivial": tactic =>`(tactic|
+  first
+  | simp; done
+  | ring; done
+  | ring_nf; done
+  | linarith; done
+  | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
+)
+
+macro "old_main_hypothesis": tactic =>`(tactic|
+  first
+  | assumption; done
+  | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
+)
+
+macro "let_assigned": tactic =>`(tactic|
+  first
+  | dsimp; done
+  | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
+)
+
+macro "term_equivalent": tactic =>`(tactic|
+  first
+  | simp; done
+  | ring; done
+  | ring_nf; done
+  | linarith; done
+  | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
+)
+
+macro "comm_ring": tactic =>`(tactic|
+  first
+  | ring; done
+  | ring_nf; done
+  | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
+)
+
+macro "litnum_reduce": tactic =>`(tactic|
+  first
+  | simp; done
+  | simp [*]; done
+  | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
+)
+
+macro "litnum_bound": tactic =>`(tactic|
+  first
+  | linarith; done
+  | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
+)
 
 def h (x : ℝ) (h1 : x > (0 : ℝ)) (y : ℝ) (h2 : y > (0 : ℝ)) : (1 : ℝ) / x + (1 : ℝ) / y ≥ (4 : ℝ) / (x + y) := by
   have h3 : in_set := by obvious
@@ -617,6 +981,58 @@ macro "obvious": tactic =>`(tactic|
 
 macro "in_set" : term => `(true)
 
+
+
+macro "term_trivial": tactic =>`(tactic|
+  first
+  | simp; done
+  | ring; done
+  | ring_nf; done
+  | linarith; done
+  | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
+)
+
+macro "old_main_hypothesis": tactic =>`(tactic|
+  first
+  | assumption; done
+  | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
+)
+
+macro "let_assigned": tactic =>`(tactic|
+  first
+  | dsimp; done
+  | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
+)
+
+macro "term_equivalent": tactic =>`(tactic|
+  first
+  | simp; done
+  | ring; done
+  | ring_nf; done
+  | linarith; done
+  | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
+)
+
+macro "comm_ring": tactic =>`(tactic|
+  first
+  | ring; done
+  | ring_nf; done
+  | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
+)
+
+macro "litnum_reduce": tactic =>`(tactic|
+  first
+  | simp; done
+  | simp [*]; done
+  | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
+)
+
+macro "litnum_bound": tactic =>`(tactic|
+  first
+  | linarith; done
+  | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
+)
+
 def h (a b : ℝ) (h1 : a > (0 : ℝ)) (h2 : b > (0 : ℝ)) : a / b + b / a ≥ (2 : ℝ) := by
   have h3 : a > (0 : ℝ) := by old_main_hypothesis
   have h4 : b > (0 : ℝ) := by old_main_hypothesis
@@ -692,6 +1108,58 @@ macro "obvious": tactic =>`(tactic|
 )
 
 macro "in_set" : term => `(true)
+
+
+
+macro "term_trivial": tactic =>`(tactic|
+  first
+  | simp; done
+  | ring; done
+  | ring_nf; done
+  | linarith; done
+  | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
+)
+
+macro "old_main_hypothesis": tactic =>`(tactic|
+  first
+  | assumption; done
+  | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
+)
+
+macro "let_assigned": tactic =>`(tactic|
+  first
+  | dsimp; done
+  | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
+)
+
+macro "term_equivalent": tactic =>`(tactic|
+  first
+  | simp; done
+  | ring; done
+  | ring_nf; done
+  | linarith; done
+  | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
+)
+
+macro "comm_ring": tactic =>`(tactic|
+  first
+  | ring; done
+  | ring_nf; done
+  | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
+)
+
+macro "litnum_reduce": tactic =>`(tactic|
+  first
+  | simp; done
+  | simp [*]; done
+  | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
+)
+
+macro "litnum_bound": tactic =>`(tactic|
+  first
+  | linarith; done
+  | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
+)
 
 def h (x y : ℝ) : x ^ 2 + y ^ 2 ≥ (2 : ℝ) * x * y := by
   first
