pass the tests for now

--- a/crates/visored/visored-pipeline/expect-files/visored-pipeline-works/batch1.tex
+++ b/crates/visored/visored-pipeline/expect-files/visored-pipeline-works/batch1.tex
@@ -264,7 +264,7 @@ macro "litnum_bound": tactic =>`(tactic|
 )
 
 def h (x : ℝ) : x ^ 2 ≥ (0 : ℝ) := by
-  have h1 : x ^ 2 ≥ (0 : ℝ) := by apply sq_nonneg
+  have h1 : x ^ 2 ≥ (0 : ℝ) := by apply square_nonnegative
   obvious
 
 \end{lstlisting}
@@ -506,7 +506,29 @@ def h (x : ℝ) (h1 : x > (0 : ℝ)) : x + (1 : ℝ) / x ≥ (2 : ℝ) := by
     x ^ 2 - (2 : ℝ) * x + (1 : ℝ) = (x - (1 : ℝ)) ^ 2 := by obvious
     _ ≥ (0 : ℝ) := by obvious
   have h5 : x ^ 2 - (2 : ℝ) * x + (1 : ℝ) ≥ (0 : ℝ) := by obvious
-  have h6 : x ^ 2 + (1 : ℝ) ≥ (2 : ℝ) * x := by term_equivalence
+  have h6 : x ^ 2 + (1 : ℝ) ≥ (2 : ℝ) * x := by
+    have d : x = x := by term_derivation_variable
+    have d1 : 2 = 2 := by term_derivation_literal
+    have d2 : x ^ 2 = x ^ 2 := by term_derivation_power
+    have d3 : (2 : ℝ) = (2 : ℝ) := by term_derivation_literal
+    have d4 : x = x := by term_derivation_variable
+    have d5 : (2 : ℝ) * x = (2 : ℝ) + x := by term_derivation_product
+    have d6 : x ^ 2 - (2 : ℝ) * x = (-2 : ℝ) + x + x ^ 2 := by term_derivation_sub
+    have d7 : (1 : ℝ) = (1 : ℝ) := by term_derivation_literal
+    have d8 : x ^ 2 - (2 : ℝ) * x + (1 : ℝ) = (1 : ℝ) + ((-2 : ℝ) + x) + x ^ 2 := by term_derivation_sum
+    have d9 : (0 : ℝ) = (0 : ℝ) := by term_derivation_literal
+    have d10 : x ^ 2 - (2 : ℝ) * x + (1 : ℝ) ≥ (0 : ℝ) = ((1 : ℝ) + ((-2 : ℝ) + x) + x ^ 2 ≥ (0 : ℝ)) := by term_derivation_chaining_separated_list
+    have d11 : x = x := by term_derivation_variable
+    have d12 : 2 = 2 := by term_derivation_literal
+    have d13 : x ^ 2 = x ^ 2 := by term_derivation_power
+    have d14 : (1 : ℝ) = (1 : ℝ) := by term_derivation_literal
+    have d15 : x ^ 2 + (1 : ℝ) = (1 : ℝ) + x ^ 2 := by term_derivation_sum
+    have d16 : (2 : ℝ) = (2 : ℝ) := by term_derivation_literal
+    have d17 : x = x := by term_derivation_variable
+    have d18 : (2 : ℝ) * x = (2 : ℝ) + x := by term_derivation_product
+    have d19 : x ^ 2 + (1 : ℝ) ≥ (2 : ℝ) * x = ((1 : ℝ) + ((-2 : ℝ) + x) + x ^ 2 ≥ (0 : ℝ)) := by term_derivation_chaining_separated_list
+    have d20 : x ^ 2 + (1 : ℝ) ≥ (2 : ℝ) * x := by term_derivation_finalize
+    term_derivation_finalize
   have h7 : x > (0 : ℝ) := by old_main_hypothesis
   have h8 : x + (1 : ℝ) / x ≥ (2 : ℝ) := by obvious
   obvious
@@ -880,10 +902,10 @@ macro "litnum_bound": tactic =>`(tactic|
 def h (x : ℝ) (h1 : x > (0 : ℝ)) (y : ℝ) (h2 : y > (0 : ℝ)) : (1 : ℝ) / x + (1 : ℝ) / y ≥ (4 : ℝ) / (x + y) := by
   have h3 : in_set := by obvious
   have h4 : x > (0 : ℝ) := by old_main_hypothesis
-  have h5 : in_set := by term_equivalence
+  have h5 : in_set := by obvious
   have h6 : y > (0 : ℝ) := by old_main_hypothesis
   have h15 : (1 : ℝ) / x + (1 : ℝ) / y ≥ (4 : ℝ) / (x + y) := by
-    have h7 : (x - y) ^ 2 ≥ (0 : ℝ) := by apply sq_nonneg
+    have h7 : (x - y) ^ 2 ≥ (0 : ℝ) := by apply square_nonnegative
     first
     | have h8 : (x - y) ^ 2 ≥ (0 : ℝ) := by calc
       (x - y) ^ 2 = x ^ 2 - (2 : ℝ) * x * y + y ^ 2 := by obvious
@@ -1046,7 +1068,29 @@ def h (a b : ℝ) (h1 : a > (0 : ℝ)) (h2 : b > (0 : ℝ)) : a / b + b / a ≥ 
     _ = (√ (a / b) - √ (b / a)) ^ 2 := by obvious
     _ ≥ (0 : ℝ) := by obvious
   have h7 : a / b - (2 : ℝ) + b / a ≥ (0 : ℝ) := by obvious
-  have h8 : a / b + b / a ≥ (2 : ℝ) := by term_equivalence
+  have h8 : a / b + b / a ≥ (2 : ℝ) := by
+    have d : a = a := by term_derivation_variable
+    have d1 : b = b := by term_derivation_variable
+    have d2 : a / b = b + a := by term_derivation_div
+    have d3 : (2 : ℝ) = (2 : ℝ) := by term_derivation_literal
+    have d4 : a / b - (2 : ℝ) = (-2 : ℝ) + (b + a) := by term_derivation_sub
+    have d5 : b = b := by term_derivation_variable
+    have d6 : a = a := by term_derivation_variable
+    have d7 : b / a = b + a := by term_derivation_div
+    have d8 : a / b - (2 : ℝ) + b / a = (-2 : ℝ) + ((2 : ℝ) + b + a) := by term_derivation_sum
+    have d9 : (0 : ℝ) = (0 : ℝ) := by term_derivation_literal
+    have d10 : a / b - (2 : ℝ) + b / a ≥ (0 : ℝ) = ((-2 : ℝ) + ((2 : ℝ) + b + a) ≥ (0 : ℝ)) := by term_derivation_chaining_separated_list
+    have d11 : a = a := by term_derivation_variable
+    have d12 : b = b := by term_derivation_variable
+    have d13 : a / b = b + a := by term_derivation_div
+    have d14 : b = b := by term_derivation_variable
+    have d15 : a = a := by term_derivation_variable
+    have d16 : b / a = b + a := by term_derivation_div
+    have d17 : a / b + b / a = (2 : ℝ) + b + a := by term_derivation_sum
+    have d18 : (2 : ℝ) = (2 : ℝ) := by term_derivation_literal
+    have d19 : a / b + b / a ≥ (2 : ℝ) = ((-2 : ℝ) + ((2 : ℝ) + b + a) ≥ (0 : ℝ)) := by term_derivation_chaining_separated_list
+    have d20 : a / b + b / a ≥ (2 : ℝ) := by term_derivation_finalize
+    term_derivation_finalize
   obvious
 
 \end{lstlisting}
