--- a/crates/visored/visored-pipeline/expect-files/visored-pipeline-works/batch0.tex
+++ b/crates/visored/visored-pipeline/expect-files/visored-pipeline-works/batch0.tex
@@ -154,7 +154,7 @@ macro "litnum_bound": tactic =>`(tactic|
 )
 
 def h (a b : ℝ) : (a + b) ^ 2 ≥ (0 : ℝ) := by
-  have h1 : (a + b) ^ 2 ≥ (0 : ℝ) := by apply sq_nonneg
+  have h1 : (a + b) ^ 2 ≥ (0 : ℝ) := by apply square_nonnegative
   obvious
 
 \end{lstlisting}
@@ -277,8 +277,32 @@ def h (x : ℝ) (h1 : x ≥ (0 : ℝ)) (y : ℝ) (h2 : y ≥ (0 : ℝ)) : (x + y
   have h3 : (√ x - √ y) ^ 2 = √ x ^ 2 - (2 : ℝ) * √ x * √ y + √ y ^ 2 := by obvious
   have h4 : √ x ^ 2 - (2 : ℝ) * √ x * √ y + √ y ^ 2 = x - (2 : ℝ) * √ (x * y) + y := by obvious
   have h5 : x - (2 : ℝ) * √ (x * y) + y ≥ (0 : ℝ) := by obvious
-  have h6 : (√ x - √ y) ^ 2 ≥ (0 : ℝ) := by apply sq_nonneg
-  have h7 : x + y ≥ (2 : ℝ) * √ (x * y) := by term_equivalence
+  have h6 : (√ x - √ y) ^ 2 ≥ (0 : ℝ) := by apply square_nonnegative
+  have h7 : x + y ≥ (2 : ℝ) * √ (x * y) := by
+    have d : x = x := by term_derivation_variable
+    have d1 : (2 : ℝ) = (2 : ℝ) := by term_derivation_literal
+    have d2 : x = x := by term_derivation_variable
+    have d3 : y = y := by term_derivation_variable
+    have d4 : x * y = x + y := by term_derivation_product
+    have d5 : √ (x * y) = √ (x + y) := by term_derivation_square
+    have d6 : (2 : ℝ) * √ (x * y) = (2 : ℝ) + √ (x + y) := by term_derivation_product
+    have d7 : x - (2 : ℝ) * √ (x * y) = x + ((-2 : ℝ) + √ (x + y)) := by term_derivation_sub
+    have d8 : y = y := by term_derivation_variable
+    have d9 : x - (2 : ℝ) * √ (x * y) + y = x + y + ((-2 : ℝ) + √ (x + y)) := by term_derivation_sum
+    have d10 : (0 : ℝ) = (0 : ℝ) := by term_derivation_literal
+    have d11 : x - (2 : ℝ) * √ (x * y) + y ≥ (0 : ℝ) = (x + y + ((-2 : ℝ) + √ (x + y)) ≥ (0 : ℝ)) := by term_derivation_chaining_separated_list
+    have d12 : x = x := by term_derivation_variable
+    have d13 : y = y := by term_derivation_variable
+    have d14 : x + y = x + y := by term_derivation_sum
+    have d15 : (2 : ℝ) = (2 : ℝ) := by term_derivation_literal
+    have d16 : x = x := by term_derivation_variable
+    have d17 : y = y := by term_derivation_variable
+    have d18 : x * y = x + y := by term_derivation_product
+    have d19 : √ (x * y) = √ (x + y) := by term_derivation_square
+    have d20 : (2 : ℝ) * √ (x * y) = (2 : ℝ) + √ (x + y) := by term_derivation_product
+    have d21 : x + y ≥ (2 : ℝ) * √ (x * y) = (x + y + ((-2 : ℝ) + √ (x + y)) ≥ (0 : ℝ)) := by term_derivation_chaining_separated_list
+    have d22 : x + y ≥ (2 : ℝ) * √ (x * y) := by term_derivation_finalize
+    term_derivation_finalize
   have h8 : (x + y) / (2 : ℝ) ≥ √ (x * y) := by obvious
   obvious
 
@@ -411,7 +435,54 @@ def h (a b c : ℝ) : a ^ 2 + b ^ 2 + c ^ 2 ≥ a * b + b * c + c * a := by
   have h3 : (a - b) ^ 2 + (b - c) ^ 2 + (c - a) ^ 2 ≥ (0 : ℝ) := by obvious
   have h4 : (2 : ℝ) * (a ^ 2 + b ^ 2 + c ^ 2 - a * b - b * c - c * a) ≥ (0 : ℝ) := by obvious
   have h5 : a ^ 2 + b ^ 2 + c ^ 2 - a * b - b * c - c * a ≥ (0 : ℝ) := by litnum_bound
-  have h6 : a ^ 2 + b ^ 2 + c ^ 2 ≥ a * b + b * c + c * a := by term_equivalence
+  have h6 : a ^ 2 + b ^ 2 + c ^ 2 ≥ a * b + b * c + c * a := by
+    have d : a = a := by term_derivation_variable
+    have d1 : 2 = 2 := by term_derivation_literal
+    have d2 : a ^ 2 = a ^ 2 := by term_derivation_power
+    have d3 : b = b := by term_derivation_variable
+    have d4 : 2 = 2 := by term_derivation_literal
+    have d5 : b ^ 2 = b ^ 2 := by term_derivation_power
+    have d6 : c = c := by term_derivation_variable
+    have d7 : 2 = 2 := by term_derivation_literal
+    have d8 : c ^ 2 = c ^ 2 := by term_derivation_power
+    have d9 : a ^ 2 + b ^ 2 + c ^ 2 = b ^ 2 + c ^ 2 + a ^ 2 := by term_derivation_sum
+    have d10 : a = a := by term_derivation_variable
+    have d11 : b = b := by term_derivation_variable
+    have d12 : a * b = b + a := by term_derivation_product
+    have d13 : a ^ 2 + b ^ 2 + c ^ 2 - a * b = (-1 : ℝ) + b + a + b ^ 2 + c ^ 2 + a ^ 2 := by term_derivation_sub
+    have d14 : b = b := by term_derivation_variable
+    have d15 : c = c := by term_derivation_variable
+    have d16 : b * c = c + b := by term_derivation_product
+    have d17 : a ^ 2 + b ^ 2 + c ^ 2 - a * b - b * c = (-1 : ℝ) + b + a + b ^ 2 + c ^ 2 + a ^ 2 + ((-1 : ℝ) + c + b) := by term_derivation_sub
+    have d18 : c = c := by term_derivation_variable
+    have d19 : a = a := by term_derivation_variable
+    have d20 : c * a = c + a := by term_derivation_product
+    have d21 : a ^ 2 + b ^ 2 + c ^ 2 - a * b - b * c - c * a = (-1 : ℝ) + b + a + ((-1 : ℝ) + c + a) + b ^ 2 + c ^ 2 + a ^ 2 + ((-1 : ℝ) + c + b) := by term_derivation_sub
+    have d22 : (0 : ℝ) = (0 : ℝ) := by term_derivation_literal
+    have d23 : a ^ 2 + b ^ 2 + c ^ 2 - a * b - b * c - c * a ≥ (0 : ℝ) = ((-1 : ℝ) + b + a + ((-1 : ℝ) + c + a) + b ^ 2 + c ^ 2 + a ^ 2 + ((-1 : ℝ) + c + b) ≥ (0 : ℝ)) := by term_derivation_chaining_separated_list
+    have d24 : a = a := by term_derivation_variable
+    have d25 : 2 = 2 := by term_derivation_literal
+    have d26 : a ^ 2 = a ^ 2 := by term_derivation_power
+    have d27 : b = b := by term_derivation_variable
+    have d28 : 2 = 2 := by term_derivation_literal
+    have d29 : b ^ 2 = b ^ 2 := by term_derivation_power
+    have d30 : c = c := by term_derivation_variable
+    have d31 : 2 = 2 := by term_derivation_literal
+    have d32 : c ^ 2 = c ^ 2 := by term_derivation_power
+    have d33 : a ^ 2 + b ^ 2 + c ^ 2 = b ^ 2 + c ^ 2 + a ^ 2 := by term_derivation_sum
+    have d34 : a = a := by term_derivation_variable
+    have d35 : b = b := by term_derivation_variable
+    have d36 : a * b = b + a := by term_derivation_product
+    have d37 : b = b := by term_derivation_variable
+    have d38 : c = c := by term_derivation_variable
+    have d39 : b * c = c + b := by term_derivation_product
+    have d40 : c = c := by term_derivation_variable
+    have d41 : a = a := by term_derivation_variable
+    have d42 : c * a = c + a := by term_derivation_product
+    have d43 : a * b + b * c + c * a = b + a + (c + a) + (c + b) := by term_derivation_sum
+    have d44 : a ^ 2 + b ^ 2 + c ^ 2 ≥ a * b + b * c + c * a = ((-1 : ℝ) + b + a + ((-1 : ℝ) + c + a) + b ^ 2 + c ^ 2 + a ^ 2 + ((-1 : ℝ) + c + b) ≥ (0 : ℝ)) := by term_derivation_chaining_separated_list
+    have d45 : a ^ 2 + b ^ 2 + c ^ 2 ≥ a * b + b * c + c * a := by term_derivation_finalize
+    term_derivation_finalize
   obvious
 
 \end{lstlisting}
@@ -674,7 +745,45 @@ def h (a b : ℝ) : (a ^ 2 + b ^ 2) / (2 : ℝ) ≥ ((a + b) / (2 : ℝ)) ^ 2 :=
     _ = (a ^ 2 + b ^ 2) / (2 : ℝ) - ((a + b) / (2 : ℝ)) ^ 2 := by obvious
     _ ≥ (0 : ℝ) := by obvious
   have h3 : (a ^ 2 + b ^ 2) / (2 : ℝ) - ((a + b) / (2 : ℝ)) ^ 2 ≥ (0 : ℝ) := by obvious
-  have h4 : (a ^ 2 + b ^ 2) / (2 : ℝ) ≥ ((a + b) / (2 : ℝ)) ^ 2 := by term_equivalence
+  have h4 : (a ^ 2 + b ^ 2) / (2 : ℝ) ≥ ((a + b) / (2 : ℝ)) ^ 2 := by
+    have d : a = a := by term_derivation_variable
+    have d1 : 2 = 2 := by term_derivation_literal
+    have d2 : a ^ 2 = a ^ 2 := by term_derivation_power
+    have d3 : b = b := by term_derivation_variable
+    have d4 : 2 = 2 := by term_derivation_literal
+    have d5 : b ^ 2 = b ^ 2 := by term_derivation_power
+    have d6 : a ^ 2 + b ^ 2 = b ^ 2 + a ^ 2 := by term_derivation_sum
+    have d7 : (2 : ℝ) = (2 : ℝ) := by term_derivation_literal
+    have d8 : (a ^ 2 + b ^ 2) / (2 : ℝ) = ((1 : ℚ) / (2 : ℚ) : ℝ) + b ^ 2 + (((1 : ℚ) / (2 : ℚ) : ℝ) + a ^ 2) := by term_derivation_div
+    have d9 : a = a := by term_derivation_variable
+    have d10 : b = b := by term_derivation_variable
+    have d11 : a + b = b + a := by term_derivation_sum
+    have d12 : (2 : ℝ) = (2 : ℝ) := by term_derivation_literal
+    have d13 : (a + b) / (2 : ℝ) = ((1 : ℚ) / (2 : ℚ) : ℝ) + b + (((1 : ℚ) / (2 : ℚ) : ℝ) + a) := by term_derivation_div
+    have d14 : 2 = 2 := by term_derivation_literal
+    have d15 : ((a + b) / (2 : ℝ)) ^ 2 = (((1 : ℚ) / (2 : ℚ) : ℝ) + b + (((1 : ℚ) / (2 : ℚ) : ℝ) + a)) ^ 2 := by term_derivation_power
+    have d16 : (a ^ 2 + b ^ 2) / (2 : ℝ) - ((a + b) / (2 : ℝ)) ^ 2 = ((1 : ℚ) / (2 : ℚ) : ℝ) + b ^ 2 + ((-1 : ℝ) + (((1 : ℚ) / (2 : ℚ) : ℝ) + b + (((1 : ℚ) / (2 : ℚ) : ℝ) + a)) ^ 2) + (((1 : ℚ) / (2 : ℚ) : ℝ) + a ^ 2) := by term_derivation_sub
+    have d17 : (0 : ℝ) = (0 : ℝ) := by term_derivation_literal
+    have d18 : (a ^ 2 + b ^ 2) / (2 : ℝ) - ((a + b) / (2 : ℝ)) ^ 2 ≥ (0 : ℝ) = (((1 : ℚ) / (2 : ℚ) : ℝ) + b ^ 2 + ((-1 : ℝ) + (((1 : ℚ) / (2 : ℚ) : ℝ) + b + (((1 : ℚ) / (2 : ℚ) : ℝ) + a)) ^ 2) + (((1 : ℚ) / (2 : ℚ) : ℝ) + a ^ 2) ≥ (0 : ℝ)) := by term_derivation_chaining_separated_list
+    have d19 : a = a := by term_derivation_variable
+    have d20 : 2 = 2 := by term_derivation_literal
+    have d21 : a ^ 2 = a ^ 2 := by term_derivation_power
+    have d22 : b = b := by term_derivation_variable
+    have d23 : 2 = 2 := by term_derivation_literal
+    have d24 : b ^ 2 = b ^ 2 := by term_derivation_power
+    have d25 : a ^ 2 + b ^ 2 = b ^ 2 + a ^ 2 := by term_derivation_sum
+    have d26 : (2 : ℝ) = (2 : ℝ) := by term_derivation_literal
+    have d27 : (a ^ 2 + b ^ 2) / (2 : ℝ) = ((1 : ℚ) / (2 : ℚ) : ℝ) + b ^ 2 + (((1 : ℚ) / (2 : ℚ) : ℝ) + a ^ 2) := by term_derivation_div
+    have d28 : a = a := by term_derivation_variable
+    have d29 : b = b := by term_derivation_variable
+    have d30 : a + b = b + a := by term_derivation_sum
+    have d31 : (2 : ℝ) = (2 : ℝ) := by term_derivation_literal
+    have d32 : (a + b) / (2 : ℝ) = ((1 : ℚ) / (2 : ℚ) : ℝ) + b + (((1 : ℚ) / (2 : ℚ) : ℝ) + a) := by term_derivation_div
+    have d33 : 2 = 2 := by term_derivation_literal
+    have d34 : ((a + b) / (2 : ℝ)) ^ 2 = (((1 : ℚ) / (2 : ℚ) : ℝ) + b + (((1 : ℚ) / (2 : ℚ) : ℝ) + a)) ^ 2 := by term_derivation_power
+    have d35 : (a ^ 2 + b ^ 2) / (2 : ℝ) ≥ ((a + b) / (2 : ℝ)) ^ 2 = (((1 : ℚ) / (2 : ℚ) : ℝ) + b ^ 2 + ((-1 : ℝ) + (((1 : ℚ) / (2 : ℚ) : ℝ) + b + (((1 : ℚ) / (2 : ℚ) : ℝ) + a)) ^ 2) + (((1 : ℚ) / (2 : ℚ) : ℝ) + a ^ 2) ≥ (0 : ℝ)) := by term_derivation_chaining_separated_list
+    have d36 : (a ^ 2 + b ^ 2) / (2 : ℝ) ≥ ((a + b) / (2 : ℝ)) ^ 2 := by term_derivation_finalize
+    term_derivation_finalize
   obvious
 
 \end{lstlisting}
