--- a/crates/visored/visored-pipeline/expect-files/visored-pipeline-works/batch1.tex
+++ b/crates/visored/visored-pipeline/expect-files/visored-pipeline-works/batch1.tex
@@ -150,6 +150,66 @@ macro "litnum_bound": tactic =>`(tactic|
   | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
 )
 
+macro "term_derivation_variable": tactic =>`(tactic|
+  first
+  | rfl; done
+  | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
+)
+
+macro "term_derivation_literal": tactic =>`(tactic|
+  first
+  | rfl; done
+  | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
+)
+
+macro "term_derivation_item_path": tactic =>`(tactic|
+  first
+  | rfl; done
+  | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
+)
+
+macro "term_derivation_sum": tactic =>`(tactic|
+  first
+  | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
+)
+
+macro "term_derivation_sub": tactic =>`(tactic|
+  first
+  | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
+)
+
+macro "term_derivation_product": tactic =>`(tactic|
+  first
+  | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
+)
+
+macro "term_derivation_div": tactic =>`(tactic|
+  first
+  | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
+)
+
+macro "term_derivation_finalize": tactic =>`(tactic|
+  first
+  | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
+)
+
+macro "term_derivation_chaining_separated_list": tactic =>`(tactic|
+  first
+  | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
+)
+
+macro "term_derivation_square": tactic =>`(tactic|
+  first
+  | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
+)
+
+macro "term_derivation_power": tactic =>`(tactic|
+  first
+  | rfl; done
+  | ring; done
+  | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
+)
+
 def h : 1 + 1 = 2 := by
   have h1 : 1 + 1 = 2 := by term_trivial
   obvious
@@ -260,6 +320,66 @@ macro "litnum_reduce": tactic =>`(tactic|
 macro "litnum_bound": tactic =>`(tactic|
   first
   | linarith; done
+  | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
+)
+
+macro "term_derivation_variable": tactic =>`(tactic|
+  first
+  | rfl; done
+  | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
+)
+
+macro "term_derivation_literal": tactic =>`(tactic|
+  first
+  | rfl; done
+  | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
+)
+
+macro "term_derivation_item_path": tactic =>`(tactic|
+  first
+  | rfl; done
+  | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
+)
+
+macro "term_derivation_sum": tactic =>`(tactic|
+  first
+  | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
+)
+
+macro "term_derivation_sub": tactic =>`(tactic|
+  first
+  | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
+)
+
+macro "term_derivation_product": tactic =>`(tactic|
+  first
+  | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
+)
+
+macro "term_derivation_div": tactic =>`(tactic|
+  first
+  | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
+)
+
+macro "term_derivation_finalize": tactic =>`(tactic|
+  first
+  | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
+)
+
+macro "term_derivation_chaining_separated_list": tactic =>`(tactic|
+  first
+  | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
+)
+
+macro "term_derivation_square": tactic =>`(tactic|
+  first
+  | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
+)
+
+macro "term_derivation_power": tactic =>`(tactic|
+  first
+  | rfl; done
+  | ring; done
   | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
 )
 
@@ -374,6 +494,66 @@ macro "litnum_reduce": tactic =>`(tactic|
 macro "litnum_bound": tactic =>`(tactic|
   first
   | linarith; done
+  | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
+)
+
+macro "term_derivation_variable": tactic =>`(tactic|
+  first
+  | rfl; done
+  | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
+)
+
+macro "term_derivation_literal": tactic =>`(tactic|
+  first
+  | rfl; done
+  | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
+)
+
+macro "term_derivation_item_path": tactic =>`(tactic|
+  first
+  | rfl; done
+  | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
+)
+
+macro "term_derivation_sum": tactic =>`(tactic|
+  first
+  | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
+)
+
+macro "term_derivation_sub": tactic =>`(tactic|
+  first
+  | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
+)
+
+macro "term_derivation_product": tactic =>`(tactic|
+  first
+  | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
+)
+
+macro "term_derivation_div": tactic =>`(tactic|
+  first
+  | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
+)
+
+macro "term_derivation_finalize": tactic =>`(tactic|
+  first
+  | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
+)
+
+macro "term_derivation_chaining_separated_list": tactic =>`(tactic|
+  first
+  | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
+)
+
+macro "term_derivation_square": tactic =>`(tactic|
+  first
+  | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
+)
+
+macro "term_derivation_power": tactic =>`(tactic|
+  first
+  | rfl; done
+  | ring; done
   | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
 )
 
@@ -493,6 +673,66 @@ macro "litnum_reduce": tactic =>`(tactic|
 macro "litnum_bound": tactic =>`(tactic|
   first
   | linarith; done
+  | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
+)
+
+macro "term_derivation_variable": tactic =>`(tactic|
+  first
+  | rfl; done
+  | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
+)
+
+macro "term_derivation_literal": tactic =>`(tactic|
+  first
+  | rfl; done
+  | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
+)
+
+macro "term_derivation_item_path": tactic =>`(tactic|
+  first
+  | rfl; done
+  | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
+)
+
+macro "term_derivation_sum": tactic =>`(tactic|
+  first
+  | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
+)
+
+macro "term_derivation_sub": tactic =>`(tactic|
+  first
+  | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
+)
+
+macro "term_derivation_product": tactic =>`(tactic|
+  first
+  | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
+)
+
+macro "term_derivation_div": tactic =>`(tactic|
+  first
+  | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
+)
+
+macro "term_derivation_finalize": tactic =>`(tactic|
+  first
+  | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
+)
+
+macro "term_derivation_chaining_separated_list": tactic =>`(tactic|
+  first
+  | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
+)
+
+macro "term_derivation_square": tactic =>`(tactic|
+  first
+  | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
+)
+
+macro "term_derivation_power": tactic =>`(tactic|
+  first
+  | rfl; done
+  | ring; done
   | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
 )
 
@@ -643,6 +883,66 @@ macro "litnum_bound": tactic =>`(tactic|
   | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
 )
 
+macro "term_derivation_variable": tactic =>`(tactic|
+  first
+  | rfl; done
+  | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
+)
+
+macro "term_derivation_literal": tactic =>`(tactic|
+  first
+  | rfl; done
+  | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
+)
+
+macro "term_derivation_item_path": tactic =>`(tactic|
+  first
+  | rfl; done
+  | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
+)
+
+macro "term_derivation_sum": tactic =>`(tactic|
+  first
+  | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
+)
+
+macro "term_derivation_sub": tactic =>`(tactic|
+  first
+  | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
+)
+
+macro "term_derivation_product": tactic =>`(tactic|
+  first
+  | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
+)
+
+macro "term_derivation_div": tactic =>`(tactic|
+  first
+  | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
+)
+
+macro "term_derivation_finalize": tactic =>`(tactic|
+  first
+  | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
+)
+
+macro "term_derivation_chaining_separated_list": tactic =>`(tactic|
+  first
+  | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
+)
+
+macro "term_derivation_square": tactic =>`(tactic|
+  first
+  | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
+)
+
+macro "term_derivation_power": tactic =>`(tactic|
+  first
+  | rfl; done
+  | ring; done
+  | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
+)
+
 def h (x : ℝ) : x ^ 2 + (1 : ℝ) ≥ (2 : ℝ) * x := by
   first
   | have h1 : (x - (1 : ℝ)) ^ 2 ≥ (0 : ℝ) := by calc
@@ -762,6 +1062,66 @@ macro "litnum_reduce": tactic =>`(tactic|
 macro "litnum_bound": tactic =>`(tactic|
   first
   | linarith; done
+  | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
+)
+
+macro "term_derivation_variable": tactic =>`(tactic|
+  first
+  | rfl; done
+  | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
+)
+
+macro "term_derivation_literal": tactic =>`(tactic|
+  first
+  | rfl; done
+  | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
+)
+
+macro "term_derivation_item_path": tactic =>`(tactic|
+  first
+  | rfl; done
+  | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
+)
+
+macro "term_derivation_sum": tactic =>`(tactic|
+  first
+  | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
+)
+
+macro "term_derivation_sub": tactic =>`(tactic|
+  first
+  | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
+)
+
+macro "term_derivation_product": tactic =>`(tactic|
+  first
+  | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
+)
+
+macro "term_derivation_div": tactic =>`(tactic|
+  first
+  | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
+)
+
+macro "term_derivation_finalize": tactic =>`(tactic|
+  first
+  | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
+)
+
+macro "term_derivation_chaining_separated_list": tactic =>`(tactic|
+  first
+  | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
+)
+
+macro "term_derivation_square": tactic =>`(tactic|
+  first
+  | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
+)
+
+macro "term_derivation_power": tactic =>`(tactic|
+  first
+  | rfl; done
+  | ring; done
   | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
 )
 
@@ -896,6 +1256,66 @@ macro "litnum_reduce": tactic =>`(tactic|
 macro "litnum_bound": tactic =>`(tactic|
   first
   | linarith; done
+  | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
+)
+
+macro "term_derivation_variable": tactic =>`(tactic|
+  first
+  | rfl; done
+  | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
+)
+
+macro "term_derivation_literal": tactic =>`(tactic|
+  first
+  | rfl; done
+  | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
+)
+
+macro "term_derivation_item_path": tactic =>`(tactic|
+  first
+  | rfl; done
+  | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
+)
+
+macro "term_derivation_sum": tactic =>`(tactic|
+  first
+  | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
+)
+
+macro "term_derivation_sub": tactic =>`(tactic|
+  first
+  | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
+)
+
+macro "term_derivation_product": tactic =>`(tactic|
+  first
+  | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
+)
+
+macro "term_derivation_div": tactic =>`(tactic|
+  first
+  | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
+)
+
+macro "term_derivation_finalize": tactic =>`(tactic|
+  first
+  | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
+)
+
+macro "term_derivation_chaining_separated_list": tactic =>`(tactic|
+  first
+  | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
+)
+
+macro "term_derivation_square": tactic =>`(tactic|
+  first
+  | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
+)
+
+macro "term_derivation_power": tactic =>`(tactic|
+  first
+  | rfl; done
+  | ring; done
   | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
 )
 
@@ -1055,6 +1475,66 @@ macro "litnum_bound": tactic =>`(tactic|
   | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
 )
 
+macro "term_derivation_variable": tactic =>`(tactic|
+  first
+  | rfl; done
+  | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
+)
+
+macro "term_derivation_literal": tactic =>`(tactic|
+  first
+  | rfl; done
+  | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
+)
+
+macro "term_derivation_item_path": tactic =>`(tactic|
+  first
+  | rfl; done
+  | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
+)
+
+macro "term_derivation_sum": tactic =>`(tactic|
+  first
+  | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
+)
+
+macro "term_derivation_sub": tactic =>`(tactic|
+  first
+  | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
+)
+
+macro "term_derivation_product": tactic =>`(tactic|
+  first
+  | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
+)
+
+macro "term_derivation_div": tactic =>`(tactic|
+  first
+  | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
+)
+
+macro "term_derivation_finalize": tactic =>`(tactic|
+  first
+  | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
+)
+
+macro "term_derivation_chaining_separated_list": tactic =>`(tactic|
+  first
+  | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
+)
+
+macro "term_derivation_square": tactic =>`(tactic|
+  first
+  | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
+)
+
+macro "term_derivation_power": tactic =>`(tactic|
+  first
+  | rfl; done
+  | ring; done
+  | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
+)
+
 def h (a b : ℝ) (h1 : a > (0 : ℝ)) (h2 : b > (0 : ℝ)) : a / b + b / a ≥ (2 : ℝ) := by
   have h3 : a > (0 : ℝ) := by old_main_hypothesis
   have h4 : b > (0 : ℝ) := by old_main_hypothesis
@@ -1202,6 +1682,66 @@ macro "litnum_reduce": tactic =>`(tactic|
 macro "litnum_bound": tactic =>`(tactic|
   first
   | linarith; done
+  | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
+)
+
+macro "term_derivation_variable": tactic =>`(tactic|
+  first
+  | rfl; done
+  | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
+)
+
+macro "term_derivation_literal": tactic =>`(tactic|
+  first
+  | rfl; done
+  | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
+)
+
+macro "term_derivation_item_path": tactic =>`(tactic|
+  first
+  | rfl; done
+  | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
+)
+
+macro "term_derivation_sum": tactic =>`(tactic|
+  first
+  | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
+)
+
+macro "term_derivation_sub": tactic =>`(tactic|
+  first
+  | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
+)
+
+macro "term_derivation_product": tactic =>`(tactic|
+  first
+  | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
+)
+
+macro "term_derivation_div": tactic =>`(tactic|
+  first
+  | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
+)
+
+macro "term_derivation_finalize": tactic =>`(tactic|
+  first
+  | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
+)
+
+macro "term_derivation_chaining_separated_list": tactic =>`(tactic|
+  first
+  | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
+)
+
+macro "term_derivation_square": tactic =>`(tactic|
+  first
+  | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
+)
+
+macro "term_derivation_power": tactic =>`(tactic|
+  first
+  | rfl; done
+  | ring; done
   | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
 )
 
